--- a/calculator/main.html
+++ b/calculator/main.html
@@ -35,6 +35,12 @@
           <button class="button operator">-</button>
         </div>
         <div>
+          <button class="button">4</button>
+          <button class="button">5</button>
+          <button class="button">6</button>
+          <button class="button operator">-</button>
+        </div>
+        <div>
           <button class="button">1</button>
           <button class="button">2</button>
           <button class="button">3</button>
